feat(batch): add functionality to manage batches

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:A0omGHZ5dq47UH0nw0vt/WtW2dcHizVhec9DxBiPXHE=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
